tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__OceanBees-AAAAAAAAAAAAAAAAAAAFVg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1366,
  "prerequisites": [
    1121
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Want some Ocean Bees? Since some servers don't generate ocean biomes, buy some!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ocean Bees",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 48000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1121
  ],
  "rewards": [],
  "tasks": []
}
