tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__CoinsCoinsCoins-AAAAAAAAAAAAAAAAAAAAEA==__PyrochloreOre-AAAAAAAAAAAAAAAAAAAEFg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1046,
  "prerequisites": [
    586
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Can't find Pyrochlore ore because of old worldgen? Buy some Ores.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Pyrochlore Ore",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": 24000,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    586
  ],
  "rewards": [],
  "tasks": []
}
